# chirpy

./: .gitignore  .gitlab-ci.yml  AUTHORS.txt  CITATION.bib  LICENSE.txt  README.md  README.txt  __init__.py  conda_env.yml  paths.conf  pyproject.toml  release  snippets.py  test.py
.test_files/: check_methods.sh
bin2/: BOX_PrintInfoSupercell.py  BOX_TestNonRectangular.py  CPMD_SplitJob.py  CUBE_CropAll.py  CUBE_CropAndVelocity.py  CUBE_DensityCrop.py  CUBE_DensityCropAndVelocity.py  CUBE_WavefunctionCrop.py  CUBE_WriteNPY.py  J_CalculateMagneticField.py  Molecule_FindMethylGroups.py  Molecule_MapAtoms.py  Molecule_PrintNormalMode.py  Molecule_Supercell.py  Molecule_WritePDB.py  Molecule_WriteTRAJSAVED.py  Molecule_WriteXYZ.py  Molecule_posvel2trajectory.py  Molecule_trajectory2velocities.py  Molecule_xvibs2posvel.py  Molecule_xvibs2trajsaved.py  PYMOL_vectorfield2arrows.py  PYMOL_vels2arrows.py  SPECTRUM_Convert_eV2nm.py  SPECTRUM_discrete2continuous.py  TEST_posvel2comMotion.py  TEST_posvel2ekin.py
chirpy/: __init__.py  config.py  constants.py  header  snippets.py  units.py  version.py
chirpy-test/: bin.py  interface.py  mathematics.py  physics.py  read.py  write.py
chirpy_test/: bin.py  classes.py  create.py  imports.py  interface.py  mathematics.py  physics.py  read.py  run.py  topology.py  write.py
classes/: core.py  crystal.py  domain.py  field.py  molecule.py  object.py  pymol.py  quantum.py  spectrum.py  system.py  trajectory.py  vcd.py  volume.py
create/: cpmd_job.py  inputfile.py  moments.py  supercell.py
creators/: gen_box.py  gen_modes.py  gen_pymol.py
generators/: gen_box.py  gen_cpmd.py  gen_pymol.py
interface/: cp2k.py  cpmd.py  gaussian.py  molden.py  namd.py  orca.py  pymol.py  vmd.py
interfaces/: classes.py  cp2k.py  cpmd.py  gaussian.py  molden.py  namd.py  orca.py
mathematics/: algebra.py  analysis.py
mdanalysis/: README  sdf.py  utils.py
physics/: classical_electrodynamics.py  constants.py  kspace.py  modern_theory_of_magnetisation.py  spectroscopy.py  statistical_mechanics.py
publication/: pubplot.py
read/: __init__.py  coordinates.py  generators.py  grid.py  modes.py  topology.py  volume.py
reader/: modes.py  trajectory.py  volume.py
readers/: coordinates.py  generators.py  modes.py  trajectory.py  volume.py
script/: CORRELATION_CalculateVibrationalSpectra.py  CPMD_AssembleCurrents.py  MODES_PlotSpectrum.py  MOMENTS_AssembleMolecules.py  MOMENTS_Convert.py  SPECTRUM_Convert_rcm2eV.py  SUPERCELL_Create.py  SYSTEM_GetAtomSpread.py
scripts/: CELL.py  CORRELATION_CalculatePowerSpectrum.py  CORRELATION_CalculateVibrationalSpectra.py  CP2K_CheckConservation.py  CP2K_CheckParticleTemp.py  CPMD_AssembleCurrents.py  MODES_Convert.py  MODES_PlotSpectrum.py  MOMENTS_AssembleMolecules.py  MOMENTS_Convert.py  ORCA_ConvertHessian.py  SPECTRUM_Convert_eV2nm.py  SPECTRUM_Convert_rcm2eV.py  SUPERCELL_Create.py  SUPERCELL_PrintInfo.py  SYSTEM_CreateTopologyFile.py  SYSTEM_FindMethylGroups.py  SYSTEM_GetAtomSpread.py  VMD_Arrows.py  (+11 more)
(+282 files in other folders)
