[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chirpy"
description = "A python package for chirality, dynamics, and molecular vibrations."
maintainers = [
  {name = "Sascha Jähnigen", email = "sascha.jaehnigen@ens.psl.eu"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "fortranformat",
    "numpy",
    "ipython",
    "jupyter",
    "jupyter_core",
    "matplotlib",
    "periodictable",
    "pycifrw",
    "scipy",
    "tqdm",
]
classifiers = [
  "Programming Language :: Python"
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/sjaehnigen/chirpy"
documentation = "https://github.com/sjaehnigen/chirpy/blob/master/README.md"
repository = "https://github.com/sjaehnigen/chirpy"


[tool.setuptools.dynamic]
version = {attr = "chirpy.__version__"}

[tool.setuptools]
packages = ["chirpy"]
package-dir = {"" = "src"}

