[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chirpy"
description = "A python package for chirality, dynamics, and molecular vibrations."
maintainers = [
  {name = "Sascha Jähnigen", email = "sascha.jahnigen@ens.psl.eu"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "fortranformat>=1.2.2",
    "numpy>=1.24.1",
    "matplotlib>=3.6.3",
    "periodictable>=1.6.1",
    "pycifrw>=4.4.5",
    "scipy>=1.10.0",
    "tqdm",
]
classifiers = [
  "Programming Language :: Python"
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/sjaehnigen/chirpy"
documentation = "https://github.com/sjaehnigen/chirpy/blob/master/README.md"
repository = "https://github.com/sjaehnigen/chirpy"


[tool.setuptools.dynamic]
version = {attr = "chirpy.__version__"}
